--- a/moreco-core/src/main/resources/template/QueryRequest.java.vm
+++ b/moreco-core/src/main/resources/template/QueryRequest.java.vm
@@ -1,26 +1,23 @@
 package xyz.weechang.moreco.component.rbac.model.dto;
 
+import ${classInfo.clazzName};
 import cn.hutool.core.bean.BeanUtil;
-import cn.hutool.core.collection.CollectionUtil;
-import xyz.weechang.moreco.component.rbac.model.domain.Menu;
-import xyz.weechang.moreco.component.rbac.model.domain.Role;
+import lombok.EqualsAndHashCode;
+import xyz.weechang.moreco.core.model.dto.QueryRequest;
 import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
 import lombok.Data;
-
-import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.List;
 
 /**
  * @author ${request.author}
  * date ${date}
  * time ${time}
  */
+@EqualsAndHashCode(callSuper = true)
 @Data
-@ApiModel("保存请求")
-public class ${classInfo.clazzSimpleName}SaveRequest implements Serializable {
-    private static final long serialVersionUID = -1L;
+@ApiModel("查询请求")
+public class ${classInfo.clazzSimpleName}QueryRequest extends QueryRequest {
+
+    private static final long serialVersionUID = 1L;
 
     #foreach ($field in $classInfo.fieldInfos)
     @ApiModelProperty("${field.desc}")
